src/objects/LAB_Mo_Tester_1__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mo Tester 1s</relationshipLabel>
        <relationshipName>Mo_Tester_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Mo Tester 1s</relationshipLabel>
        <relationshipName>Mo_Tester_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Mo Tester 1s</relationshipLabel>
        <relationshipName>Mo_Tester_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mo Tester 1s</relationshipLabel>
        <relationshipName>Mo_Tester_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Mo Tester 1s</relationshipLabel>
        <relationshipName>Mo_Tester_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT1_Checkbox_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MT1 Checkbox 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT1_Checkbox_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MT1 Checkbox 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT1_Checkbox_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MT1 Checkbox 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT1_Currency_1__c</fullName>
        <label>MT1 Currency 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT1_Currency_2__c</fullName>
        <label>MT1 Currency 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT1_Currency_3__c</fullName>
        <label>MT1 Currency 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT1_Date_1__c</fullName>
        <label>MT1 Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT1_Date_2__c</fullName>
        <label>MT1 Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT1_Date_3__c</fullName>
        <label>MT1 Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT1_Datetime_1__c</fullName>
        <label>MT1 Datetime 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MT1_Datetime_2__c</fullName>
        <label>MT1 Datetime 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MT1_Datetime_3__c</fullName>
        <label>MT1 Datetime 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MT1_Email_1__c</fullName>
        <label>MT1 Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MT1_Email_2__c</fullName>
        <label>MT1 Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MT1_Email_3__c</fullName>
        <label>MT1 Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MT1_External_ID_1_Text__c</fullName>
        <externalId>true</externalId>
        <label>MT1 External ID 1 Text</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT1_External_ID_2_Number__c</fullName>
        <externalId>true</externalId>
        <label>MT1 External ID 2 Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT1_Geolocation_1__c</fullName>
        <label>MT1 Geolocation 1</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MT1_Geolocation_2__c</fullName>
        <label>MT1 Geolocation 2</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MT1_Geolocation_3__c</fullName>
        <label>MT1 Geolocation 3</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MT1_Multi_Select_1__c</fullName>
        <label>MT1 Multi-Select 1</label>
        <picklist>
            <picklistValues>
                <fullName>MT1 MS1 One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 MS1 Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 MS1 Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 MS1 Four</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MT1_Multi_Select_2__c</fullName>
        <label>MT1 Multi-Select 2</label>
        <picklist>
            <picklistValues>
                <fullName>MT1 MS2 One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 MS2 Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 MS2 Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 MS2 Four</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MT1_Multi_Select_3__c</fullName>
        <label>MT1 Multi-Select 3</label>
        <picklist>
            <picklistValues>
                <fullName>MT1 MS3 One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 MS3 Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 MS3 Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 MS3 Four</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MT1_Number_1__c</fullName>
        <inlineHelpText>Length 10 Decimal 5</inlineHelpText>
        <label>MT1 Number 1</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT1_Number_2__c</fullName>
        <inlineHelpText>Length 10 Decimal 5</inlineHelpText>
        <label>MT1 Number 2</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT1_Number_3__c</fullName>
        <inlineHelpText>Len 18 Dec 0</inlineHelpText>
        <label>MT1 Number 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT1_Percent_1__c</fullName>
        <label>MT1 Percent 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT1_Percent_2__c</fullName>
        <label>MT1 Percent 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT1_Percent_3__c</fullName>
        <label>MT1 Percent 3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT1_Phone_1__c</fullName>
        <label>MT1 Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MT1_Phone_2__c</fullName>
        <label>MT1 Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MT1_Phone_3__c</fullName>
        <label>MT1 Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MT1_Picklist_1__c</fullName>
        <label>MT1 Picklist 1</label>
        <picklist>
            <picklistValues>
                <fullName>MT1 P1 One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 P1 Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 P1 Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 P1 Four</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT1_Picklist_2__c</fullName>
        <label>MT1 Picklist 2</label>
        <picklist>
            <picklistValues>
                <fullName>MT1 P2 One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 P2 Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 P2 Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 P2 Four</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT1_Picklist_3__c</fullName>
        <label>MT1 Picklist 3</label>
        <picklist>
            <picklistValues>
                <fullName>MT1 P3 One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 P3 Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 P3 Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 P4 Four</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT1_Rollup1_Total_GC1_Count__c</fullName>
        <label>MT1 Rollup1 Total GC1 Count</label>
        <summarizedField>LAB_MT1_Child_1__c.MT1_C1_Roll_Up_1_GC1_Count__c</summarizedField>
        <summaryForeignKey>LAB_MT1_Child_1__c.LAB_Mo_Tester_1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT1_Text_1__c</fullName>
        <label>MT1 Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT1_Text_2__c</fullName>
        <label>MT1 Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT1_Text_3__c</fullName>
        <label>MT1 Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Area_1__c</fullName>
        <label>MT1 Text Area 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Area_2__c</fullName>
        <label>MT1 Text Area 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Area_3__c</fullName>
        <label>MT1 Text Area 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Area_Long_1__c</fullName>
        <label>MT1 Text Area Long 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Area_Long_2__c</fullName>
        <label>MT1 Text Area Long 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Area_Long_3__c</fullName>
        <label>MT1 Text Area Long 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Area_Rich_1__c</fullName>
        <label>MT1 Text Area Rich 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Area_Rich_2__c</fullName>
        <label>MT1 Text Area Rich 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Area_Rich_3__c</fullName>
        <label>MT1 Text Area Rich 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Encrypted_1__c</fullName>
        <inlineHelpText>Credit Card Mask</inlineHelpText>
        <label>MT1 Text Encrypted 1</label>
        <length>19</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Encrypted_2__c</fullName>
        <inlineHelpText>Len 25 Last four clear</inlineHelpText>
        <label>MT1 Text Encrypted 2</label>
        <length>25</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>MT1_Text_Encrypted_3__c</fullName>
        <inlineHelpText>National Insurance Number</inlineHelpText>
        <label>MT1 Text Encrypted 3</label>
        <length>13</length>
        <maskChar>asterisk</maskChar>
        <maskType>nino</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>MT1_URL_1__c</fullName>
        <label>MT1 URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MT1_URL_2__c</fullName>
        <label>MT1 URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MT1_URL_3__c</fullName>
        <label>MT1 URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mo_Tester_5__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mo Tester 5</label>
        <referenceTo>LAB_Mo_Tester_5__c</referenceTo>
        <relationshipLabel>Mo Tester 1s</relationshipLabel>
        <relationshipName>Mo_Tester_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Mo Tester 1s</relationshipLabel>
        <relationshipName>Mo_Tester_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Mo Tester 1s</relationshipLabel>
        <relationshipName>Mo_Tester_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mo_Tester_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mo Tester 1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MT1_Email_1__c</columns>
        <columns>MT1_Multi_Select_1__c</columns>
        <columns>MT1_Phone_4__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mo Tester 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mo Tester 1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>